# pnet_prostate_paper

./: .gitignore  pyproject.toml
data/prostate_paper/: data_reader.py
model/: coef_weights_utils.py  coef_weights_utils.py.bak  layers_custom.py  layers_custom.py.bak  model_utils.py  nn.py
model/builders/: builder_utils.py  builder_utils.py.bak  builders_utils.py  builders_utils.py.bak  prostate_models.py  prostate_models.py.bak
review/3-4/: number of neurons in model.ipynb
train/: run_me.py
utils/: evaluate.py  evaluate.py.bak
