[project]
name = "pnet-prostate-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "h5py>=2.9.0",
    "imageio>=2.6.1",
    "keras>=2.2.4",
    "markdown>=3.1.1",
    "numpy>=1.16.6",
    "pandas>=0.23.4",
    "plotly>=4.5.4",
    "protobuf>=3.11.2",
    "pyyaml>=5.1.1",
    "scikit-image>=0.14.2",
    "scikit-learn>=0.20.1",
    "scipy>=1.1.0",
    "adjusttext>=0.7.3",
    "lifelines>=0.19.5",
    "matplotlib>=2.2.4",
    "psutil>=5.8.0",
    "networkx>=2.2",
    "pyvis>=0.1.7.0",
    "requests>=2.23.0",
    "rope>=0.18.0",
    "seaborn>=0.9.1",
    "toml>=0.10.2",
    "upsetplot>=0.4.0",
    "urllib3>=1.25.8",
    "xlrd>=0.9.0",
    "pip>=25.1.1",
]
